# asciify

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  asciify.cpp
